--- a/examples/showPly.aframe.html
+++ b/examples/showPly.aframe.html
@@ -24,7 +24,7 @@
                 });
 
                 var size = 0.1;
-                var entity = scene.addAnEntity('a-entity', { 'super-touch': 'rotationX:-0.5 0.5;scale:0.5 1.5', 'position': '0 0 -5' });
+                var entity = scene.addAnEntity('a-entity', { 'super-touch': 'rotationX:-30 30;rotationZ:-30 30;scale:0.5 1.5', 'position': '0 -3 -5', rotation: '0 0 0' });
                 var map = entity.addAnEntity('a-voxels#map', {
                     src: '../ply/hill.ply',
                     textures: '#111111_floor3,#no_444444_floor2',
@@ -48,7 +48,7 @@
                     // scale: '0.2 0.2 0.2',
                 });
                 scene.addEntities({
-                    'a-entity': { camera: '', 'position': '0 5.6 -2', rotation: '-45 0 0' },
+                    'a-entity': { camera: '', 'position2': '0 5.6 -2', rotation: '-25 0 0' },
                     'a-sky': { color: "#aCaCEC" },
                 });
 
