--- a/examples/loadPly.html
+++ b/examples/loadPly.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>load ply</title>
-    <script src="../src/mvPly2map.js"></script>
+    <script src="../src/mvPly2Map.js"></script>
     <script type="text/ply" id="test1">
         ply
         format ascii 1.0
