--- a/examples/showPly.html
+++ b/examples/showPly.html
@@ -10,7 +10,7 @@
     <script src="./js/superTouch.js"></script>
     <!-- <script src="../dist/MergedVoxels.aframe.min.js"></script> -->
     <script src="../src/Voxels.js"></script>
-    <script src="../src/mvPly2map.js"></script>
+    <script src="../src/mvPly2Map.js"></script>
     <script type="text/ply" src="../ply/demo1.ply"></script>
 </head>
 
