--- a/examples/hillAndChick.aframe.html
+++ b/examples/hillAndChick.aframe.html
@@ -7,8 +7,8 @@
     <title>custom geometry</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://faace.github.io/aFrameByCode/dist/aFrameByCode.min.js"></script>
-    <script src="./js/superTouch.js"></script>
-    <script src="../src/mvPly2map.js"></script>
+    <script src="./js/superTouchForVoxels.js"></script>
+    <script src="../src/mvPly2Map.js"></script>
     <script src="../src/Voxels.js"></script>
     <script src="../src/Voxels.aframe.js"></script>
 </head>
