--- a/examples/showPly.html
+++ b/examples/showPly.html
@@ -8,72 +8,42 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://faace.github.io/aFrameByCode/dist/aFrameByCode.min.js"></script>
     <script src="./js/superTouch.js"></script>
-    <!-- <script src="../dist/MergedVoxels.aframe.min.js"></script> -->
-    <script src="../src/Voxels.js"></script>
     <script src="../src/mvPly2Map.js"></script>
-    <script type="text/ply" src="../ply/demo1.ply"></script>
+    <script src="../src/Voxels.js"></script>
+    <script src="../src/Voxels.aframe.js"></script>
 </head>
 
 <body>
     <script>
-        mvPly2Map.parsePlys(function (err, plys) {
-            console.log(err, plys);
-            AFRAME.registerComponent('line2', {
-                schema: {
-                    start: { default: '0 0 -5' },
-                    end: { default: '0 10 -5' }
-                },
-                init: function () {
-                    map = plys.demo1;
-                    var textures = {
-                        '#dd0000': 'floor',
-                        // '#00ff00': 'floor3',
-                        '#3366ff': 'floor3'
-                    };
-                    var el = this.el;
-                    var colors = mvPly2Map.getAllColors(map);
-                    console.log(colors);
-                    var info = {
-                        align: 'center bottom center',
-                        map: map,
-                        textures: textures,
-                        opacities: {
-                            '#dd0000': 0.5
-                        },
-                        // height: 0.5,
-                        // center: { x: 0, y: 0, z: 0 }
-                    }
-                    new Voxels(info).run(function (error, mesh) {
-                        el.setObject3D('mesh', mesh);
-                    });
-                }
-            });
-            AFRAME.createAScene({
-                id: 'scene1',
-                onInit: function (scene) {
-                    scene.assets.addList({
-                        'img#box': './img/box.png',
-                        'img#floor': './img/floor2.jpg',
-                        'img#floor3': './img/floor3.jpg',
-                    });
+        AFRAME.createAScene({
+            id: 'scene1',
+            onInit: function (scene) {
+                scene.assets.addList({
+                    'img#floor2': './img/floor2.jpg',
+                    'img#floor3': './img/floor3.jpg',
+                });
 
-                    var cameraEntity = scene.addAnEntity('a-entity', { camera: '', 'position': '0 1.6 0' });
-                    cameraEntity.addAnEntity('a-cursor', '');
+                var size = 0.1;
+                var entity = scene.addAnEntity('a-entity', { 'super-touch': 'rotationX:-30 30;rotationZ:-30 30;scale:0.5 1.5', 'position': '0 -3 -5', rotation: '0 0 0' });
+                var map = entity.addAnEntity('a-voxels#map', {
+                    src: '../ply/hill.ply',
+                    textures: '#111111_floor3,#no_444444_floor2',
+                    opacities: '#33ccff_0.6',
+                    align: 'center bottom center',
+                    width: size,
+                    height: size,
+                    depth: size,
+                    type: 'map',
+                });
 
-                    scene.addEntities({
-                        'a-entity': {
-                            line2: '',
-                            position: " 0 0 -4",
-                            // scale: '0.2 0.2 0.2',
-                            'super-touch': '',
-                        },
-                        'a-sky': { color: "#ECECEC" },
-                    });
-                },
-            });
-            AFRAME.loadScene('scene1');
+                scene.addEntities({
+                    'a-entity': { camera: '', 'position2': '0 5.6 -2', rotation: '-25 0 0' },
+                    'a-sky': { color: "#aCaCEC" },
+                });
+
+            },
         });
-
+        AFRAME.loadScene('scene1');
     </script>
 </body>
 
