--- a/examples/multiCameras.aframe.html
+++ b/examples/multiCameras.aframe.html
@@ -40,7 +40,10 @@
                 });
 
                 var size = this.size = 0.1;
-                var entity = scene.addAnEntity('a-entity', { 'super-touch': 'rotationX:-30 30;rotationZ:-30 30;scale:1 5', 'position': '0 -3 -3', rotation: '0 0 0' });
+                var entity = scene.addAnEntity('a-entity#world', {
+                    'super-touch': 'rotationX:-30 30;rotationZ:-30 30;scale:1 5', 'position': '0 -3 -3', rotation: '0 0 0',
+                    'voxels-sys': 'world:#world;rotationX:-30 30;rotationZ:-30 30;scale:1 5'
+                });
                 var map = entity.addAnEntity('a-voxels#map', {
                     src: '../ply/multiCameras.ply',
                     textures: '#111111_floor3,#no_444444_floor2',
